--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,8 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script src="https://kit.fontawesome.com/bc6659b6c4.js" crossorigin="anonymous"></script>
+
 
     <!--FOnts y fontawsome-->
     <link rel="stylesheet" href="/stylesheets/style.css" />
@@ -71,6 +73,7 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
